# tomari

./: .gitignore  .oxfmtrc.json  .oxlintrc.json  ARCHITECTURE.md  Cargo.toml  LICENSE  Makefile  README.md  deny.toml  index.html  lefthook.yaml  package.json  pnpm-lock.yaml  rust-toolchain.toml  tsconfig.json  vite.config.ts  vitest.setup.ts
.github/: dependabot.yml
.github/workflows/: ci.yaml  release.yaml
crates/tomari-core/: Cargo.toml
crates/tomari-core/src/: clock.rs  defaults.rs  error.rs  external.rs  lib.rs  paths.rs
crates/tomari-core/src/db/: config.rs  keyboard.rs  mod.rs  settings.rs
crates/tomari-core/src/domain/: action.rs  config.rs  keyboard.rs  mod.rs  settings.rs  window.rs
crates/tomari-keyboard/: Cargo.toml
crates/tomari-keyboard/src/: accelerator.rs  engine.rs  error.rs  lib.rs
crates/tomari-window/: Cargo.toml
crates/tomari-window/src/: error.rs  geometry.rs  lib.rs  macos.rs  manager.rs
docs/: features.md  permissions.md  url-scheme.md
src/: App.tsx  main.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns  make_source.py
src-tauri/src/: actions.rs  capsmap.rs  commands.rs  displays.rs  drag_to_move.rs  drag_to_snap.rs  error.rs  eventtap.rs  frontmost.rs  import_export.rs  keepawake.rs  keycodes.rs  keysend.rs  locks.rs  main.rs  overlay.rs  peek.rs  shortcuts.rs  state.rs  tap.rs  tray.rs  validate.rs  wake.rs  window_ops.rs
src/components/: ShortcutRecorder.test.tsx  ShortcutRecorder.tsx  ui.test.tsx  ui.tsx
src/lib/: api.ts  errors.test.ts  errors.ts  format.test.ts  format.ts  i18n.test.ts  i18n.tsx  recorder.test.ts  recorder.ts  settings.test.tsx  settings.tsx  suspension.test.ts  suspension.ts  types.ts
src/views/: GeneralView.test.tsx  GeneralView.tsx  KeyboardView.test.tsx  KeyboardView.tsx  SessionView.test.tsx  SessionView.tsx  SettingsView.tsx  WindowView.test.tsx  WindowView.tsx
