[workspace]
resolver = "3"
members = ["crates/*", "src-tauri"]

[workspace.package]
edition = "2024"
license = "MIT"
repository = "https://github.com/mhiro2/tomari"
rust-version = "1.95"
version = "0.1.0"
publish = false

[workspace.dependencies]
# Internal crates
tomari-core = { path = "crates/tomari-core" }
tomari-keyboard = { path = "crates/tomari-keyboard" }
tomari-window = { path = "crates/tomari-window" }

# Shared external crates
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4", "serde"] }
url = "2"
rusqlite = { version = "0.40", features = ["bundled"] }
directories = "6"

[workspace.lints.rust]
unsafe_op_in_unsafe_fn = "warn"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
uninlined_format_args = "allow"

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
panic = "abort"
strip = true
