[package]
name = "tomari-app"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
publish.workspace = true
description = "Tomari — a macOS menu-bar app for keyboard customization and window management."
default-run = "tomari"

[lints]
workspace = true

[[bin]]
name = "tomari"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tomari-core.workspace = true
tomari-keyboard.workspace = true
tomari-window.workspace = true
serde.workspace = true
serde_json.workspace = true
url.workspace = true
tracing.workspace = true
tracing-appender.workspace = true
tracing-subscriber.workspace = true
tauri = { version = "2", features = ["tray-icon", "image-png", "macos-private-api"] }
tauri-plugin-global-shortcut = "2"
tauri-plugin-autostart = "2.5.1"
tauri-plugin-single-instance = { version = "2", features = ["deep-link"] }
tauri-plugin-updater = "2"
tauri-plugin-deep-link = "2"
tauri-plugin-dialog = "2"

[target.'cfg(target_os = "macos")'.dependencies]
core-graphics = "0.25"
core-foundation = "0.10"
core-foundation-sys = "0.8"
objc2-foundation = { version = "0.3", features = [
  "NSArray",
  "NSGeometry",
  "NSLocale",
  "NSNotification",
  "NSOperation",
  "NSString",
  "NSURL",
  "block2",
] }
objc2-app-kit = { version = "0.3", features = [
  "NSWorkspace",
  "NSRunningApplication",
  "NSApplication",
  "NSColor",
  "NSGraphics",
  "NSPanel",
  "NSResponder",
  "NSScreen",
  "NSView",
  "NSWindow",
  "objc2-core-foundation",
  "objc2-core-graphics",
  "block2",
] }
objc2-quartz-core = { version = "0.3", features = [
  "CALayer",
  "objc2-core-foundation",
  "objc2-core-graphics",
] }
block2 = "0.6"
objc2 = "0.6"
