[package]
name = "tomari-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
publish.workspace = true
description = "Core domain types, errors and SQLite persistence for Tomari."

[lints]
workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
uuid.workspace = true
url.workspace = true
rusqlite.workspace = true
directories.workspace = true

[dev-dependencies]
tempfile = "3"
