[package]
name = "tomari-keyboard"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
publish.workspace = true
description = "Keyboard customization: global-hotkey accelerators and a tap/hold modifier engine."

[lints]
workspace = true

[dependencies]
tomari-core.workspace = true
serde.workspace = true
thiserror.workspace = true
tracing.workspace = true
