[package]
name = "tomari-window"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
publish.workspace = true
description = "Window management: snap-preset geometry and the macOS Accessibility apply layer."

[lints]
workspace = true

[dependencies]
tomari-core.workspace = true
serde.workspace = true
thiserror.workspace = true
tracing.workspace = true

[target.'cfg(target_os = "macos")'.dependencies]
core-foundation = "0.10"
core-foundation-sys = "0.8"
core-graphics = "0.25"
objc2 = "0.6"
objc2-app-kit = { version = "0.3", features = ["NSScreen"] }
objc2-foundation = { version = "0.3", features = ["NSArray", "NSGeometry"] }
